# python-hupa

./: CHANGELOG.md  README.rst  pyproject.toml
.github/workflows/: pub.yml
src/hupa/: __init__.py
tests/: _test.py  conftest.py  test_all.py
